--- a/ProtoRabbit/ProtoRabbit.csproj
+++ b/ProtoRabbit/ProtoRabbit.csproj
@@ -49,6 +49,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="CommunityToolkit.Maui" Version="4.0.0" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
