--- a/ProtoRabbit/ProtoRabbit.csproj
+++ b/ProtoRabbit/ProtoRabbit.csproj
@@ -53,6 +53,7 @@
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
+        <PackageReference Include="protobuf-net" Version="3.1.33" />
     </ItemGroup>
 
     <ItemGroup>
@@ -62,5 +63,12 @@
 
     <ItemGroup>
       <None Remove="Services\" />
+      <None Remove="protobuf-net" />
+      <None Remove="Resources\Fonts\CascadiaMono.ttf" />
+      <None Remove="Resources\Images\hot-svgrepo-com.svg" />
+    </ItemGroup>
+    <ItemGroup>
+      <BundleResource Include="Resources\Fonts\CascadiaMono.ttf" />
+      <BundleResource Include="Resources\Images\shine.svg" />
     </ItemGroup>
 </Project>
