--- a/ProtoRabbit-Electron/package.json
+++ b/ProtoRabbit-Electron/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.3",
     "@electron-toolkit/utils": "^1.0.2",
-    "electron-updater": "^5.3.0"
+    "@types/amqplib": "^0.10.1",
+    "electron-updater": "^5.3.0",
+    "libamqp": "^1.0.7"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
