--- a/ProtoRabbit-Electron/package.json
+++ b/ProtoRabbit-Electron/package.json
@@ -23,6 +23,7 @@
     "@electron-toolkit/preload": "^1.0.3",
     "@electron-toolkit/utils": "^1.0.2",
     "@types/amqplib": "^0.10.1",
+    "antd": "^5.2.3",
     "electron-updater": "^5.3.0",
     "libamqp": "^1.0.7"
   },
