--- a/ProtoRabbit-MAUI/App/ProtoRabbit-MAUI.csproj
+++ b/ProtoRabbit-MAUI/App/ProtoRabbit-MAUI.csproj
@@ -15,7 +15,7 @@
         <ApplicationTitle>ProtoRabbit</ApplicationTitle>
 
         <!-- App Identifier -->
-        <ApplicationId>com.companyname.protorabbit</ApplicationId>
+        <ApplicationId>de.marius.protorabbit</ApplicationId>
         <ApplicationIdGuid>31D122FC-7572-45C5-8DCA-FF1D200873EB</ApplicationIdGuid>
 
         <!-- Versions -->
@@ -24,17 +24,15 @@
 
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">13.1</SupportedOSPlatformVersion>
-        <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
         <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
-        <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-maccatalyst|AnyCPU'">
       <CreatePackage>false</CreatePackage>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-maccatalyst|AnyCPU'">
-		<RuntimeIdentifiers>maccatalyst-arm64</RuntimeIdentifiers>
+		<RuntimeIdentifiers>maccatalyst-x64</RuntimeIdentifiers> <!-- change to maccatalyst-arm64 is necessary -->
 	</PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
       <MtouchFastDev>true</MtouchFastDev>
