--- a/.github/workflows/mauitests.yml
+++ b/.github/workflows/mauitests.yml
@@ -10,9 +10,11 @@ jobs:
       - uses: actions/checkout@main
 
       - name: Setup .NET 7
-        uses: actions/setup-dotnet@v3.0.3
+        uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '7.0.x'
+      - name: Show DOTNET SDKs
+        run: dotnet --list-sdks
 
       # - name: Restore Packages
       #   run: dotnet restore ProtoRabbit.sln
