--- a/.github/workflows/mauitests.yml
+++ b/.github/workflows/mauitests.yml
@@ -18,7 +18,7 @@ jobs:
         run: dotnet --list-sdks
 
       - name: Restore Packages
-        run: dotnet restore ProtoRabbit-MAUI/App/ProtoRabbit.sln
+        run: dotnet restore ProtoRabbit-MAUI/ProtoRabbit-MAUI-Test/ProtoRabbit-MAUI-Test.csproj
 
       # - name: Build solution
       #   run: dotnet build ProtoRabbit.sln --no-restore --configuration Release
