--- a/.github/workflows/mauitests.yml
+++ b/.github/workflows/mauitests.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@main
 
-      - name: Setup .NET 7
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0'
+      # - name: Setup .NET 7
+      #   uses: actions/setup-dotnet@v3
+      #   with:
+      #     dotnet-version: '7.0'
       
       - name: Show DOTNET SDKs
         run: dotnet --list-sdks
