--- a/.github/workflows/mauitests.yml
+++ b/.github/workflows/mauitests.yml
@@ -14,6 +14,9 @@ jobs:
       #   with:
       #     dotnet-version: '7.0'
       
+      - name: Install tizen workload for some reason
+        run: dotnet workload restore ProtoRabbit-MAUI/ProtoRabbit-MAUI-Test/ProtoRabbit-MAUI-Test.csproj
+
       - name: Show DOTNET SDKs
         run: dotnet --list-sdks
 
