--- a/.github/workflows/mauitests.yml
+++ b/.github/workflows/mauitests.yml
@@ -1,5 +1,8 @@
 name: Run ProtoRabbit-MAUI Tests
-on: [push]
+on: 
+  push:
+    paths:
+      - "ProtoRabbit-MAUI/*"
 jobs:
   test:
     runs-on: ubuntu-latest
