--- a/.github/workflows/mauitests.yml
+++ b/.github/workflows/mauitests.yml
@@ -1,8 +1,8 @@
 name: Run ProtoRabbit-MAUI Tests
-on: 
+on:
   push:
     paths:
-      - "ProtoRabbit-MAUI/*"
+      - 'ProtoRabbit-MAUI/*'
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -16,7 +16,7 @@ jobs:
       #   uses: actions/setup-dotnet@v3
       #   with:
       #     dotnet-version: '7.0'
-      
+
       - name: Install tizen workload for some reason
         run: dotnet workload restore ProtoRabbit-MAUI/ProtoRabbit-MAUI-Test/ProtoRabbit-MAUI-Test.csproj
 
