Run the MAUI tests only when something in the MAUI folder changes

--- a/.github/workflows/mauitests.yml
+++ b/.github/workflows/mauitests.yml
@@ -2,7 +2,7 @@ name: Run ProtoRabbit-MAUI Tests
 on:
   push:
     paths:
-      - 'ProtoRabbit-MAUI/*'
+      - 'ProtoRabbit-MAUI/**'
 jobs:
   test:
     runs-on: ubuntu-latest
