--- a/.actrc
+++ b/.actrc
@@ -1,2 +1,4 @@
 # --container-architecture linux/amd64
-# -P ubuntu-latest=node:19
+
+# Careful: we're using the LARGE image here, the docs say it is 20GB in size.
+-P ubuntu-latest=catthehacker/ubuntu:full-latest
