--- a/.github/workflows/mauitests.yml
+++ b/.github/workflows/mauitests.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - "ProtoRabbit-MAUI/**"
 jobs:
-  ProtoRabbit-MAUI Tests:
+  protorabbit-maui-tests:
     runs-on: ubuntu-latest
     # These permissions are necessary for 'publish-unit-test-result-action'
     permissions:
