--- a/ProtoRabbit-Electron/package.json
+++ b/ProtoRabbit-Electron/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.3",
     "@electron-toolkit/utils": "^1.0.2",
+    "@monaco-editor/react": "^4.4.6",
     "@types/amqplib": "^0.10.1",
     "antd": "^5.2.3",
     "electron-updater": "^5.3.0",
