--- a/ProtoRabbit-Electron/tsconfig.node.json
+++ b/ProtoRabbit-Electron/tsconfig.node.json
@@ -1,6 +1,12 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
-  "include": ["electron.vite.config.*", "src/main/*", "src/preload/*", "src/shared.ts"],
+  "include": [
+    "electron.vite.config.*",
+  "src/main/*",
+  "src/preload/*",
+  "src/shared/**/*.ts",
+  "src/shared/ProtoRabbitSettings.ts"
+],
   "compilerOptions": {
     "composite": true,
     "types": ["electron-vite/node"]
