--- a/ProtoRabbit-Electron/tsconfig.web.json
+++ b/ProtoRabbit-Electron/tsconfig.web.json
@@ -1,10 +1,10 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.web.json",
   "include": [
-    "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
-    "src/renderer/src/**/*.tsx",
-    "src/preload/*.d.ts"
+    "src/preload/*.d.ts",
+    "src/shared/**/*",
+    "src/shared/ProtoRabbitSettings.ts"
   ],
   "compilerOptions": {
     "composite": true,
