--- a/ProtoRabbit-Electron/package.json
+++ b/ProtoRabbit-Electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ProtoRabbit",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Send and receive protobuf serialized messages to and from RabbitMQ",
   "main": "./out/main/index.js",
   "author": "Marius M.",
@@ -28,7 +28,8 @@
     "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
     "libamqp": "^1.0.7",
-    "protobufjs": "^7.2.2"
+    "protobufjs": "^7.2.2",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
