Add and Update is not Upsert

--- a/ProtoRabbit-Electron/.vscode/settings.json
+++ b/ProtoRabbit-Electron/.vscode/settings.json
@@ -8,5 +8,6 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "cSpell.words": ["Upsert"]
 }
