Moved the management of running subscriptions to the SubscriptionManager class - a global mutable state Added a simple PubSub implementation

--- a/ProtoRabbit-Electron/tsconfig.node.json
+++ b/ProtoRabbit-Electron/tsconfig.node.json
@@ -4,6 +4,7 @@
     "electron.vite.config.*",
   "src/main/*",
   "src/preload/*",
+  "src/preload/*.d.ts",
   "src/shared/**/*.ts",
   "src/preload/ProtoRabbitSettings.ts"
 ],
