--- a/ProtoRabbit-Electron/package.json
+++ b/ProtoRabbit-Electron/package.json
@@ -25,6 +25,7 @@
     "@monaco-editor/react": "^4.4.6",
     "@types/amqplib": "^0.10.1",
     "antd": "^5.3.1",
+    "dayjs": "^1.11.7",
     "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
     "libamqp": "^1.0.7",
