Setup Playwright and a first dummy test

--- a/ProtoRabbit-Electron/tsconfig.json
+++ b/ProtoRabbit-Electron/tsconfig.json
@@ -3,6 +3,8 @@
   "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }],
   "compilerOptions": {
     "forceConsistentCasingInFileNames": true,
-    "strict": true
+    "strict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   }
 }
