--- a/ProtoRabbit-Electron/tsconfig.web.json
+++ b/ProtoRabbit-Electron/tsconfig.web.json
@@ -12,6 +12,8 @@
     "./out"
   ],
   "compilerOptions": {
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "composite": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
