--- a/.github/workflows/electrontests.yml
+++ b/.github/workflows/electrontests.yml
@@ -16,11 +16,16 @@ jobs:
           - 5672:5672
     steps:
       - uses: actions/checkout@v2
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "14.x"
+
+      # - name: Install Node.js
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: "14.x"
+
       - name: Install dependencies
         run: npm install
+        working-directory: ProtoRabbit-Electron
+
       - name: Run Playwright tests
         run: npx playwright test
+        working-directory: ProtoRabbit-Electron
