Fixed failing Plawright test
Explicitly specify the path to the main file and to electron
Run the test in verbose mode

--- a/.github/workflows/electrontests.yml
+++ b/.github/workflows/electrontests.yml
@@ -37,5 +37,5 @@ jobs:
           path: ProtoRabbit-Electron/out/
 
       - name: Run Playwright tests
-        run: npx playwright test
+        run: DEBUG=pw:api npx playwright test
         working-directory: ProtoRabbit-Electron
