--- a/.github/workflows/electrontests.yml
+++ b/.github/workflows/electrontests.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     services:
       rabbitmq:
         image: rabbitmq
@@ -30,11 +30,11 @@ jobs:
         run: npm run build
         working-directory: ProtoRabbit-Electron
 
-      - name: Archive production artifacts
+      - name: Archive out directory
         uses: actions/upload-artifact@v3
         with:
-          name: ProtoRabbit-Electron-dir
-          path: ProtoRabbit-Electron/
+          name: out-dir
+          path: ProtoRabbit-Electron/out/
 
       - name: Run Playwright tests
         run: DEBUG=pw:api npx playwright test
